--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 </a>
             </div>
             <div class="item">
-                <a href="#">
-                    <img src="https://cf2.ppt-online.org/files2/slide/h/hs7Dgip9menvutWySYMVrbjcU3kLP0qI1ARd5oF4x/slide-0.jpg"
+                <a href="https://gdz.ru/class-8/informatika/reshebnik-bosova-l-l-2012/">
+                    <img src="https://lh3.googleusercontent.com/proxy/G1OOegSycNxXHKslKVZ4Dt4Y9RUqCHzG1brIiS5d1XLGTtUF1CpnbbJsHaqkCNvry9vM_-vTFob3CLbGhfdcXdz2lNzZRGnVtqludQ9-"
                         alt="">
                 </a>
             </div>
             <div class="item">
                 <a href="#">
-                    <img src="https://yt3.ggpht.com/a/AATXAJxV-Vcy4cKp2FrF5wjhCSEKz3Uf_sPBFXrgTw=s900-c-k-c0xffffffff-no-rj-mo"
+                    <img src=""
                         alt="">
                 </a>
             </div>
